Labyrinth Demo Embed Fix

--- a/labyrinth_demo.html
+++ b/labyrinth_demo.html
@@ -42,12 +42,12 @@
 							<!-- Project Title -->
 							<h1 class="major">The Labyrinth Algorithm</h1>
 							<!-- Game Embed -->
-							<iframe class="embed" frameborder="0" src="https://itch.io/embed-upload/15007635?color=333333" allowfullscreen="" width="1000" height="700"><a href="https://madcolors-entertainment.itch.io/labyrinth-demo">Play Labyrinth Demo on itch.io</a></iframe>
+							<iframe class="embed" frameborder="0" src="https://itch.io/embed-upload/15022834?color=333333" allowfullscreen="" width="1000" height="700"><a href="https://madcolors-entertainment.itch.io/labyrinth-demo">Play Labyrinth Demo on itch.io</a></iframe>
 							<!-- Big Game Widget -->
 							<iframe class="widget" frameborder="0" src="https://itch.io/embed/3897193?border_width=2&amp;bg_color=0098db&amp;fg_color=ffffff&amp;link_color=0ce6f2&amp;border_color=0ce6f2" width="554" height="169">
 								<a href="https://madcolors-entertainment.itch.io/labyrinth-demo">Labyrinth Demo by Ryan Carpenter</a></iframe>
 							<!-- Small Game Widget -->
-							<iframe class="smallWidget" frameborder="0" src="https://itch.io/embed/3897193?border_width=2&amp;bg_color=0098db&amp;fg_color=ffffff&amp;link_color=0ce6f2&amp;border_color=0ce6f2" width="210" height="169">
+							<iframe class="smallWidget" frameborder="0" src="https://itch.io/embed/3897193?bor`der_width=2&amp;bg_color=0098db&amp;fg_color=ffffff&amp;link_color=0ce6f2&amp;border_color=0ce6f2" width="210" height="169">
 								<a href="https://madcolors-entertainment.itch.io/labyrinth-demo">Labyrinth Demo by Ryan Carpenter</a></iframe>
 							<!-- Project Summary -->
 							<h2>Summary</h2>
